[project]
name = "ha-airseekers"
version = "0.1.0"
description = "Home Assistant custom integration for the AIRSEEKERS TRON / TRON Max RTK lawn mower"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Kevin Mence" }]
keywords = ["home-assistant", "hacs", "lawn-mower", "airseekers", "tron", "robot-mower"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["custom_components", "tests", "tools"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "W",   # pycodestyle warnings
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # comprehensions
    "SIM", # flake8-simplify
    "TID", # tidy imports
    "RUF",
]
ignore = [
    "E501",  # line length handled by formatter
]

[tool.ruff.lint.isort]
force-sort-within-sections = true
combine-as-imports = true
known-first-party = ["custom_components.airseekers"]

[tool.mypy]
python_version = "3.12"
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_untyped_defs = false
check_untyped_defs = true
# Home Assistant ships incomplete type info for some helpers; keep mypy pragmatic.
ignore_missing_imports = true
exclude = "tests/"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-q"
